# etcd-ydb

./: README.md  go.mod
etcd-ydb-userver/: .gitignore  CMakeLists.txt  CMakePresets.json  Makefile  README.md
etcd-ydb-userver/.github/workflows/: ci.yml  docker.yaml
etcd-ydb-userver/cmake/: DownloadUserver.cmake  get_cpm.cmake
etcd-ydb-userver/configs/: config_vars.testing.yaml  config_vars.yaml  static_config.yaml
etcd-ydb-userver/proto/api/etcdserverpb/: rpc.proto
etcd-ydb-userver/proto/server/etcdserver/api/v3election/v3electionpb/: v3election.proto
etcd-ydb-userver/proto/server/etcdserver/api/v3lock/v3lockpb/: v3lock.proto
etcd-ydb-userver/proto/server/lease/leasepb/: lease.proto
etcd-ydb-userver/src/: main.cpp
etcd-ydb-userver/src/etcd/: batch_delete_processor.cpp  batch_processor.cpp  batch_processor.h  batch_put_processor.cpp  batch_txn_processor.cpp  batch_watch_processor.cpp  check_request.cpp  check_request.h  client_provider.cpp  client_provider.hpp  compaction_handler.cpp  credentials_provider.cpp  credentials_provider.h  kv_service.cpp  kv_service.hpp  model.hpp  query_optimizer.cpp  query_optimizer.h  range_handler.cpp  revision_service.cpp  revision_service.hpp  watch_service.cpp  watch_service.h  watch_synchronization.cpp  watch_synchronization.h  watch_topic_reader.cpp  watch_topic_reader.h
pkg/etcd/: client.go
test/etcd/: main_test.go  put_test.go  txn_test.go  utils_test.go  watch_test.go
tools/benchmark/: run.sh  watch_put.go
